--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
     "tabWidth": 4,
     "semi": true,
     "singleQuote": true,
-    "trailingComma": "all",
+    "trailingComma": "none",
     "bracketSpacing": true,
     "arrowParens": "always"
 }
