--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
     "version": "0.0.1",
     "description": "jmdict.js is a library for working with JMdict",
     "main": "dist/index.js",
+    "files": [
+        "dist"
+    ],
     "scripts": {
-        "build": "tsc && tsc-alias"
+        "build": "tsc && tsc-alias",
+        "format": "prettier --write .",
+        "lint": "eslint . --ext .ts",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -14,14 +20,26 @@
         "Japanese",
         "JMdict"
     ],
-    "author": "xAkre",
-    "license": "ISC",
+    "author": "Dawid Szymaniak",
+    "license": "Apache-2.0",
     "bugs": {
         "url": "https://github.com/xAkre/jmdict.js/issues"
     },
     "homepage": "https://github.com/xAkre/jmdict.js#readme",
     "dependencies": {
+        "xml2js": "^0.6.2"
+    },
+    "devDependencies": {
         "@types/node": "^20.12.12",
+        "@types/xml2js": "^0.4.14",
+        "@typescript-eslint/eslint-plugin": "^7.9.0",
+        "@typescript-eslint/parser": "^7.9.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "jest": "^29.7.0",
+        "prettier": "^3.2.5",
+        "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.2",
         "tsc-alias": "^1.8.10",
         "typescript": "^5.4.5"
     }
