--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "homepage": "https://github.com/xAkre/jmdict.js#readme",
     "dependencies": {
+        "sax": "^1.4.1",
         "xml2js": "^0.6.2",
         "yargs": "^17.7.2"
     },
